@@ -16,6 +16,10 @@
   <table name="Two" count="4" />
   <table name="Three" count="4" />
   <table name="Four" count="4" />
+  <table name="Un" count="1" />
+  <table name="Deux" count="2" />
+  <table name="Trois" count="9" />
+  <table name="Quatre" count="10" />
 
   <table name="Five" count="4" />
   <table name="Six" count="4" />
