@@ -34,5 +34,9 @@
   <tournament name="sitngo8" count="7" />
   <tournament name="sitngo20" count="19" />
   <tournament name="sitngo50" count="49" />
+  <tournament name="Ositngo4" count="3" />
+  <tournament name="Ositngo8" count="7" />
+  <tournament name="Ositngo20" count="19" />
+  <tournament name="Ositngo50" count="49" />
 
 </settings>
