@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 <settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="settings.xsd" display2d="yes" display3d="no" verbose="5" delays="true" tcptimeout="2000">
-  <delays position="0" begin_round="1" end_round="1" end_round_last="1" showdown="7" lag="15"/>
+  <delays position="2" begin_round="1" end_round="1" end_round_last="1" showdown="7" lag="15"/>
   <screen fullscreen="no" width="1024" height="768"/>
-  <name>foobar3</name>
-  <passwd>foobar</passwd>
+  <name>gogogo</name>
+  <passwd>gogogo</passwd>
   <remember>yes</remember>
   <muck>yes</muck>
   <auto_post>yes</auto_post>
